added consume button and functionality to items that can be consumed  - custom buttons and logic (default/pressed/disabled) created for drop/consume buttons  - state observer in RecyclerViewer for when drop/consume button is disabled generalized dialogue RecyclerView so all fragment can use same adapter created models for Dots and special effects  - CharacterEntity model uses theses objects instead of implementing them  fixed RecyclerView for dot/special list in CharacterFragment from double adding/deleting items   - now calls notifyAllX observer for special and dot changes   - special/dot now updates with duration change   - fixed removeInputDot and removeInputSpecial so it actually removes the items and doesn't return a value

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name='leave_encounter'>Move on</string>
     <string name='font'>press_start_2p</string>
     <string name="drop_button">Drop</string>
+    <string name="consume_button">Consume</string>
 
     <string name="intelligence_short">INT</string>
     <string name="strength_short">STR</string>
