DialogueAdapter now takes Dialogue and EffectDialogue inputs, add once observed change damageTarget returns value, so observed from CharacterViewModel on return value new Dialogue outputs added  - health, mana icons added for all dots/special effects, and mana and health change added spacing between dialogue outputs RandomBenefits encounter added   - inventory_snippet xml layout added to display a new Inventory object

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,10 @@
     <string name="special_plural">Special Effects</string>
     <string name="stat_plural">Stats</string>
 
+    <string name='pick_up_inventory'>Pick Up</string>
+
     <string name='continue_dialogue'>Continue</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
