Character and the encounter data for ChoiceBenefitEncounter is saved on onStop()  - ChoiceBenefitEncounter now retains UI state after app closing / configuration change  - InventorySnippet adapter called in endState for easier saving implemented singleton pattern for MainGameViewModel and CharacterViewModel Constants added to DialogueType and EncounterViewModel interfaces to store JSON key value for saving data  - added toJSON in DialogueType interface to convert dialogue objects into JSON to save changed scroll background to only cover the CharacterFragment and GameFragments  - removed the background coloring on the scroll images and put in a flat background color inside XML of MainGameActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
 
     <string name="fileCharacter">characterData</string>
-    <string name="filePrevEncounters">prevEncounters</string>
+    <string name="fileEncounter">fileEncounters</string>
 
     <string name="Starting_Gold">10</string>
     <string name="Starting_Item">1</string>
