combat encounter logic flow and some place holder UI (functionality missing)  - added combat dialogue to the dialogue recycler viewer used in combat encounter character portraits with border added fixed button state not turning to enables in trap encounter fixed methods in DatabaseAdapter for getting Inventory Object of specific tier changed the Inventory object constructor to also take a cursor, and setVariable methods taking a cursor as a parameter  - made the cursor references deal directly with the id of database item instead of the row applied the proper newInstance fragment pattern and using singleton pattern in fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,14 @@
 
     <string name='continue_dialogue'>Continue</string>
 
+    <string name='category_weapons_option'>Weapons</string>
+    <string name='category_abilities_option'>Abilities</string>
+    <string name='category_items_option'>items</string>
+
+    <string name="btn_run">Run</string>
+    <string name="btn_continue">Continue</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
