--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,9 @@
     <string name="btn_run">Run</string>
     <string name="btn_continue">Continue</string>
 
+    <string name="buy">Buy</string>
+    <string name="sell">Sell</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
