Random benefit encounter  - Now can take a tier, number of rewards, and booleans for exp and gold rewards    - tier, exp and gold rewards only specified when making custom random benefit encounter.  - made InventoryToRetrieve a Stack    - added method in EncounterViewModel to pull a saved Stack of Inventory rewards from JSON    - EncounterViewModel now uses InventoryFactory to turn the JSON String into Inventory objects  - created builder for RandomBenefitModel to create customized random benefit encounter  - added numRewards object inside JSON String asset file for encounters made methods in MainGameModel static InventoryInfoActivity  - created CreateInventoryActivity with static method to create the activity    - made any call to InventoryInfoActivity go through CreateInventoryActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="stat_plural">Stats</string>
 
     <string name='pick_up_inventory'>Pick Up</string>
+    <string name="leave_inventory">Leave</string>
 
     <string name='continue_dialogue'>Continue</string>
 
