changed layout_button_options inside encounter's xml to LinearLayout moved applyBeforeEncounter to gotoBeginningState in EncounterViewModel  - can check for a saved game so it doesn't repeat on returning to saved set savedEncounter to null in MainGameViewModel before creating a new encounter InventoryEntity interface  - split Inventory interface into Inventory and InventoryEntity    - Inventory encompasses actual Inventory objects with a tier    - InventoryEntity encompasses everything to do with Inventory (Inventory objects and its action dependencies) implemented ShopKeeperLoot  - gets a tier to scale to loot to, and builds GridModels by taking Inventory objects from the database and converting  - holds all logic to do with the cost, type of loot, and number of loot to buy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,27 +24,27 @@
 
     <string name="Wizard_Start_Str">0</string>
     <string name="Wizard_Start_Int">10</string>
-    <string name="Wizard_Start_Con">3</string>
-    <string name="Wizard_Start_Spd">4</string>
+    <string name="Wizard_Start_Con">0</string>
+    <string name="Wizard_Start_Spd">5</string>
 
-    <string name="Paladin_Start_Str">5</string>
-    <string name="Paladin_Start_Int">4</string>
+    <string name="Paladin_Start_Str">0</string>
+    <string name="Paladin_Start_Int">5</string>
     <string name="Paladin_Start_Con">10</string>
     <string name="Paladin_Start_Spd">0</string>
 
-    <string name="Archer_Start_Str">7</string>
-    <string name="Archer_Start_Int">5</string>
-    <string name="Archer_Start_Con">2</string>
-    <string name="Archer_Start_Spd">8</string>
+    <string name="Archer_Start_Str">5</string>
+    <string name="Archer_Start_Int">0</string>
+    <string name="Archer_Start_Con">0</string>
+    <string name="Archer_Start_Spd">10</string>
 
     <string name="Warrior_Start_Str">10</string>
     <string name="Warrior_Start_Int">0</string>
-    <string name="Warrior_Start_Con">6</string>
-    <string name="Warrior_Start_Spd">2</string>
+    <string name="Warrior_Start_Con">5</string>
+    <string name="Warrior_Start_Spd">0</string>
 
     <string name="full_on">You are full on </string>
     <string name="not_enough_gold">You do not have enough gold for that</string>
-    <string name="already_added">This is already added to your inventory</string>
+    <string name="already_added">This is already added to your inventoryEntity</string>
 
     <string name="abandon">Abandon</string>
     <string name='new_game'>New Game</string>
